--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-svg": "^13.0.0"
+    "react-native-svg": "^13.0.0",
+    "expo-blur": "~11.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
