--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@react-navigation/stack": "^6.2.3",
     "expo": "~46.0.9",
     "expo-blur": "~11.2.0",
     "expo-font": "~10.2.0",
@@ -23,7 +24,7 @@
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-svg": "^13.0.0",
+    "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0"
   },
