--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.6.11",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gifted-chat": "^1.0.4",
