--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/material-top-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
@@ -17,6 +18,7 @@
     "expo": "~46.0.9",
     "expo-blur": "~11.2.0",
     "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.11",
@@ -28,9 +30,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-image-picker": "~13.3.1",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
